<resources>

    <string name="app_name">SYM - Labo 1</string>
    <string name="main_email_hint">Your e-mail address</string>
    <string name="main_password_hint">Your password</string>
    <string name="main_mandatory_field">Required field cannot be left blank</string>
    <string name="main_validate_btn">Validate</string>
    <string name="main_cancel_btn">Cancel</string>
    <string name="main_create_account">New account</string>

</resources>
